<resources>
    <string name="app_name">CyberCigarette</string>
    <string name="theory">Theory</string>
    <string name="liquid_diy">Liquid DIY</string>
    <string name="mixing">Mixing</string>
    <string name="nicotine_absorption">Nicotine Absorption</string>
    <string name="coil_selection">Coil Selection</string>
    <string name="navigation">Navigation</string>
    <string name="coil_resistance">Coil Resistance</string>
    <string name="resistance">Resistance Ω (Ohm)</string>
    <string name="resistance_example">Example (Ω): 0.5</string>
    <string name="calculate_power">Calculate Power (W)</string>
    <string name="minimum_power">Minimum Power (W)</string>
    <string name="recommended_power">Recommended Power (W)</string>
    <string name="maximum_power">Maximum Power (W)</string>
    <string name="power">Power W (Watt)</string>
    <string name="power_example">Example (W): 30</string>
    <string name="calculate_resistance">Calculate Resistance (Ω)</string>
    <string name="minimum_resistance">Minimum Resistance (Ω)</string>
    <string name="recommended_resistance">Recommended Resistance (Ω)</string>
    <string name="maximum_resistance">Maximum Resistance (Ω)</string>
    <string name="wrong_resistance">Wrong Resistance</string>
    <string name="wrong_power">Wrong Power</string>
    <string name="volume_example">Example (ml): 10</string>
    <string name="nicotine_example">Example (mg/ml): 20</string>
    <string name="short_volume_example">Example: 10</string>
    <string name="short_nicotine_example">Example: 20</string>
    <string name="error">ERROR</string>
    <string name="nicotine">Nicotine</string>
    <string name="volume">Volume</string>
    <string name="nicotine_mg_ml">Nicotine (mg/ml)</string>
    <string name="volume_ml">Volume (ml)</string>
</resources>