<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorSecondaryContainer"
    android:layout_margin="5dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/row_mixing_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        tools:text="1."
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nicotine_mg_ml"/>
        <EditText
            android:id="@+id/row_mixing_nicotine_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_nicotine_example"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume_ml"/>
        <EditText
            android:id="@+id/row_mixing_volume_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_volume_example"
            android:inputType="number" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/row_mixing_remove_btn"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_delete"
        android:background="?colorError"/>

</LinearLayout>