<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CoilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Header -->

        <TextView
            android:id="@+id/coil_header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/coil_resistance"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Resistance -->

        <TextView
            android:id="@+id/coil_resistance_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/resistance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coil_header_txt" />

        <AutoCompleteTextView
            android:id="@+id/coil_resistance_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/resistance_example"
            android:inputType="numberDecimal"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coil_resistance_txt" />

        <FrameLayout
            android:id="@+id/coil_resistance_output_container_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coil_resistance_input">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/coil_resistance_output_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:visibility="gone"
                android:background="?colorSecondaryContainer">

                <View
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    android:background="?colorOnSecondaryContainer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.65"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/coil_resistance_minimum_txt"
                    android:text="@string/minimum_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/coil_resistance_minimum_out_txt"
                    android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/coil_resistance_minimum_txt" />

                <TextView
                    android:id="@+id/coil_resistance_recommended_txt"
                    android:text="@string/recommended_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/coil_resistance_minimum_txt"/>

                <TextView
                    android:id="@+id/coil_resistance_recommended_out_txt"
                    android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/coil_resistance_recommended_txt" />

                <TextView
                    android:id="@+id/coil_resistance_maximum_txt"
                    android:text="@string/maximum_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/coil_resistance_recommended_out_txt"/>

                <TextView
                    android:id="@+id/coil_resistance_maximum_out_txt"
                    android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/coil_resistance_maximum_txt" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <Button
            android:id="@+id/coil_resistance_btn"
            android:text="@string/calculate_power"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coil_resistance_output_container_parent" />


        <!-- Power -->

        <TextView
            android:id="@+id/coil_power_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/power"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coil_resistance_btn" />

        <AutoCompleteTextView
            android:id="@+id/coil_power_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/power_example"
            android:inputType="numberDecimal"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coil_power_txt" />

        <FrameLayout
            android:id="@+id/coil_power_output_container_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coil_power_input">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/coil_power_output_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:visibility="gone"
                android:paddingHorizontal="15dp"
                android:paddingVertical="15dp"
                android:background="?colorSecondaryContainer">

                <View
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    android:background="?colorOnSecondaryContainer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.65"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/coil_power_minimum_txt"
                    android:text="@string/minimum_resistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/coil_power_minimum_out_txt"
                    android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/coil_power_minimum_txt" />

                <TextView
                    android:id="@+id/coil_power_recommended_txt"
                    android:text="@string/recommended_resistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/coil_power_minimum_txt"/>

                <TextView
                    android:id="@+id/coil_power_recommended_out_txt"
                    android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/coil_power_recommended_txt" />

                <TextView
                    android:id="@+id/coil_power_maximum_txt"
                    android:text="@string/maximum_resistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/coil_power_recommended_out_txt"/>

                <TextView
                    android:id="@+id/coil_power_maximum_out_txt"
                    android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/coil_power_maximum_txt" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <Button
            android:id="@+id/coil_power_btn"
            android:text="@string/calculate_resistance"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coil_power_output_container_parent" />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/coil_main_chart"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coil_power_btn"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>